feat: 修改 model、verifyFood
